# kpcli-rust

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: build.yml
examples/: make_fixture.rs
src/: db.rs  main.rs  repl.rs  sandbox.rs
tests/: add_abort.rs  concurrent_save.rs  custom_fields.rs  init.rs  init_toctou.rs  kdf_params.rs  mv.rs  name_validation.rs  purge_history.rs  repl_commands.rs  round_trip.rs  sandbox.rs  stale_tmp.rs  terminal_injection.rs  wrong_password.rs
tests/common/: mod.rs
