[package]
name = "kpcli-rust"
version = "0.1.0"
edition = "2021"
description = "Offline-only command-line KeePass (KDBX4) client"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
keepass = { version = "0.12", default-features = false, features = ["save_kdbx4"] }
# rust-argon2 (library name `argon2`) is already pulled in transitively by
# keepass; we depend on it directly so we can construct
# `KdfConfig::Argon2id { version: argon2::Version::Version13, .. }` for new
# databases.
rust-argon2 = "3"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "14", default-features = false, features = ["with-file-history"] }
rpassword = "7"
anyhow = "1"
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.4"
libc = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3
